blockml/test/errors/08_model_sql_always_where_calc/e256/e256m.model
model: e256m
sql_always_where_calc: '{% apply_filter unk %} target {% end_apply_filter %}'
joins:
- from_view: e256_one
  as: a

fields:
- filter: f1
  result: number
